# OpenUltraFHE

./: CMakeLists.txt  README.md  lyapunov_zeros.py  openultrafhe.cpp  openultrafhe_mirror.cpp  openultrafhe_real.cpp  phi_riemann_test.py  riemann_phi_analysis.py
riemann_phi/: README.md  compute_chi.py  phi_riemann_theorem.py  riemann_lyapunov.py  zeta_functional_analysis.py
